--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -24,6 +24,6 @@ RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local
 
 ADD php.ini /usr/local/etc/php/conf.d/40-custom.ini
 
-WORKDIR /var/www/magento2
+WORKDIR /var/www/html
 
 CMD ["php-fpm"]
